--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eveniet ut voluptatibus error impedit repellat, eligendi aspernatur cupiditate suscipit consequatur esse hic reiciendis quod quaerat molestiae, laboriosam perferendis autem porro?
-    
+
 </body>
 </html>
