--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Netflix clone</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eveniet ut voluptatibus error impedit repellat, eligendi aspernatur cupiditate suscipit consequatur esse hic reiciendis quod quaerat molestiae, laboriosam perferendis autem porro?
+<div class="main">
+    <nav >
+        <span><img src="files/logo.svg" width="154px" alt=""></span>
+        <div>
+            <button>English</button>
+            <button>Sign in</button>
+        </div>
+    </nav>
+    <div class="box">
+    </div>
+    <div class="hero">
+        <span>Unlimited movies, Tv shows and more</span>
+        <span>Watch anywhere. Cancel anytime.</span>
+        <span>Ready to watch? Enter your email to cretrae or restart your membership.</span>
+        <div>
+            <input type="text" placeholder="Enter address">
+            <button>Get Started</button>
+        </div>
+    </div>
 
+
+</div>
 </body>
+
 </html>
