--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix clone</title>
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <div class="main">
     <nav >
-        <span><img src="files/logo.svg" width="154px" alt=""></span>
+        <span><img src="files/logo.svg" width="94px" alt=""></span>
         <div>
-            <button>English</button>
-            <button>Sign in</button>
+            <button class="btn eng ">English</button>
+            <button class="btn sign">Sign in</button>
         </div>
     </nav>
     <div class="box">
     </div>
     <div class="hero">
-        <span>Unlimited movies, Tv shows and more</span>
-        <span>Watch anywhere. Cancel anytime.</span>
-        <span>Ready to watch? Enter your email to cretrae or restart your membership.</span>
+        <span>Unlimited movies, Tv </span>
+        <span>shows and more </span>
+        <span>Start at $149. Cancel anytime.</span>
+        <span>Ready to watch? Enter your email to create or restart your membership.</span>
         <div>
-            <input type="text" placeholder="Enter address">
-            <button>Get Started</button>
+            <input type="text" placeholder="Email address">
+            <button class="btn get">Get Started</button>
         </div>
     </div>
 
