--- a/index.html
+++ b/index.html
@@ -4,32 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+    <title>netflix</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<div class="main">
-    <nav >
-        <span><img src="files/logo.svg" width="94px" alt=""></span>
-        <div>
-            <button class="btn eng ">English</button>
-            <button class="btn sign">Sign in</button>
-        </div>
-    </nav>
-    <div class="box">
-    </div>
-    <div class="hero">
-        <span>Unlimited movies, Tv </span>
-        <span>shows and more </span>
-        <span>Start at $149. Cancel anytime.</span>
-        <span>Ready to watch? Enter your email to create or restart your membership.</span>
-        <div>
-            <input type="text" placeholder="Email address">
-            <button class="btn get">Get Started</button>
+
+<body>
+    <div class="main">
+        <nav>
+            <span><img src="files/logo.svg" width="154px" alt=""></span>
+            <div>
+                <button class="eng">English</button>
+                <button class="sign">Sign In</button>
+            </div>
+        </nav>
+        <div class="box"></div>
+        <div class="text">
+            <span>Unlimited movies, TV shows and more</span>
+            <span>Watch anywhere. Cancel anytime.</span>
+            <span>Ready to watch? Enter your email to create or restart your membership.</span>
         </div>
     </div>
-
-
-</div>
+    <div class="line"></div>
 </body>
 
 </html>
