--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
             <span>Unlimited movies, TV shows and more</span>
             <span>Watch anywhere. Cancel anytime.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
+            <div>
+                <input type="text" placeholder="Email address">
+                <button class="get">Get Started ></button>
+            </div>
         </div>
     </div>
     <div class="line"></div>
+    
 </body>
 
 </html>
