--- a/index.html
+++ b/index.html
@@ -29,7 +29,69 @@
         </div>
     </div>
     <div class="line"></div>
-    
+
+    //second page
+    <div class="main2">
+        <div class="textmain2">
+            <span>Enjoy on your TV</span>
+            <span>Watch on smart TVs, PlayStation, Xbox, Chromecast,</span>
+            <span>Apple TV, Blu-ray players and more</span>
+        </div>
+        <div class="secimg">
+            <img src="files/image/lcd remote.png" alt="">
+            <video src="files/video/lcd remote.m4v" autoplay loop muted></video>
+        </div>
+    </div>
+
+    <div class="line"></div>
+    //third page
+    <div class="main3">
+        <section class="section_main3">
+            <div class="textmain3">
+                <span>Download your shows to <br> watch offline</span>
+                <span>Save your favourites easily and always have <br> something to watch.</span>
+
+            </div>
+            <div class="imgmain3">
+                <img src="files/image/iphone girl.jpg" alt="">
+                <div class="box"></div>
+            </div>
+        </section>
+    </div>
+    <div class="line"></div>
+
+    //fourth page
+    <div class="main4">
+        <section class="section_main4">
+            <div class="textmain4">
+                <span>Watch everywhere</span>
+                <span>Stream unlimited movies and TV shows on your <br> phone, tablet, laptop, and TV.</span>
+            </div>
+            <div class="imgvid">
+                <img src="files/image/rajma chawal.png" alt="">
+                <video src="files/video/punjabi.m4v" autoplay loop muted></video>
+            </div>
+        </section>
+    </div>
+    <div class="line"></div>
+
+    //fifth page
+    <div class="main5">
+        <section class="section_main5">
+            <div class="texmain5">
+                <span>Create profiles for kids</span>
+                <span>Send children on adventures with their favourite <br> characters in a space made just for
+                    them—free with <br> your membership.
+
+                </span>
+            </div>
+            <div class="imgchild">
+                <img src="files/image/children.png" alt="">
+            </div>
+        </section>
+    </div>
+    <div class="line"></div>
+
 </body>
 
 </html>
