--- a/index.html
+++ b/index.html
@@ -48,13 +48,21 @@
     <div class="main3">
         <section class="section_main3">
             <div class="textmain3">
-                <span>Download your shows to <br> watch offline</span>
+                <span>Download your shows <br> to watch offline</span>
                 <span>Save your favourites easily and always have <br> something to watch.</span>
 
             </div>
             <div class="imgmain3">
                 <img src="files/image/iphone girl.jpg" alt="">
-                <div class="box"></div>
+                <div class="box">
+                    <div>
+                        <img src="files/image/stranger things.png" alt="">
+                    </div>
+                    <div class="box-text">
+                        <span>Stranger Things</span>
+                        <span>Downloading...</span>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
@@ -92,6 +100,70 @@
     </div>
     <div class="line"></div>
 
+    //sixth page
+    <div class="main6">
+        <section>
+            <h1>Frequently Asked Questions</h1>
+            <div class="boxes">
+                <button >
+                    <span>What is Netflix?</span>
+                    <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
+                        class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </button>
+                <button >
+                    <span>How much does Netflix cost?</span>
+                    <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
+                        class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </button>
+                <button>
+                    <span>Where can I watch?</span>
+                    <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
+                        class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </button>
+                <button>
+                    <span>How do I cancel</span>
+                    <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
+                        class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </button>
+                <button>
+                    <span>What can I watch on Netflix?</span>
+                    <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
+                        class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </button>
+                <button>
+                    <span>Is Netflix good for kids?</span>
+                    <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
+                        class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 17V3H19V17H33V19H19V33H17V19H3V17H17Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </button>
+
+            </div>
+            
+                <h3>Ready to watch? Enter your email to create or restart your membership.
+                </h3>
+                <div class="input-getstarted">
+                <input type="text" placeholder=" Email address">
+                <button>Get Started > </button>
+            </div>
+        </section>
+    </div>
 </body>
 
 </html>
