--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <section>
             <h1>Frequently Asked Questions</h1>
             <div class="boxes">
-                <button >
+                <button>
                     <span>What is Netflix?</span>
                     <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
@@ -113,7 +113,7 @@
                             fill="currentColor"></path>
                     </svg>
                 </button>
-                <button >
+                <button>
                     <span>How much does Netflix cost?</span>
                     <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
@@ -155,15 +155,18 @@
                 </button>
 
             </div>
-            
-                <h3>Ready to watch? Enter your email to create or restart your membership.
-                </h3>
-                <div class="input-getstarted">
+
+            <h3>Ready to watch? Enter your email to create or restart your membership.
+            </h3>
+            <div class="input-getstarted">
                 <input type="text" placeholder=" Email address">
-                <button>Get Started > </button>
+                <button class="get">Get Started > </button>
             </div>
         </section>
     </div>
+
+    <div class="line"></div>
+
 </body>
 
 </html>
