--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <section>
             <h1>Frequently Asked Questions</h1>
             <div class="boxes">
-                <button>
+                <button class="box">
                     <span>What is Netflix?</span>
                     <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
@@ -113,7 +113,7 @@
                             fill="currentColor"></path>
                     </svg>
                 </button>
-                <button>
+                <button class="box">
                     <span>How much does Netflix cost?</span>
                     <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
@@ -121,7 +121,7 @@
                             fill="currentColor"></path>
                     </svg>
                 </button>
-                <button>
+                <button class="box">
                     <span>Where can I watch?</span>
                     <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
@@ -129,7 +129,7 @@
                             fill="currentColor"></path>
                     </svg>
                 </button>
-                <button>
+                <button class="box">
                     <span>How do I cancel</span>
                     <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
@@ -137,7 +137,7 @@
                             fill="currentColor"></path>
                     </svg>
                 </button>
-                <button>
+                <button class="box">
                     <span>What can I watch on Netflix?</span>
                     <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
@@ -145,7 +145,7 @@
                             fill="currentColor"></path>
                     </svg>
                 </button>
-                <button>
+                <button class="box">
                     <span>Is Netflix good for kids?</span>
                     <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="elj7tfr3 e164gv2o4 default-ltr-cache-l7vm9h e1svuwfo1" data-name="Plus" alt="">
@@ -167,6 +167,30 @@
 
     <div class="line"></div>
 
+    <div class="main7">
+        <p>Question? Call <a href="">000-800-919-1694</a></p>
+        <div class="features">
+            <span><a href="">FAQ</a></span>
+            <span><a href="">Help Centre</a></span>
+            <span><a href="">Account</a></span>
+            <span><a href="">Media Centre</a></span>
+            <span><a href="">Investor Relations</a></span>
+            <span><a href="">Jobs</a></span>
+            <span><a href="">Ways to Watch</a></span>
+            <span><a href="">Terms of Use</a></span>
+            <span><a href="">Privacy</a></span>
+            <span><a href="">Cookie Preferences</a></span>
+            <span><a href="">Corporate Information</a></span>
+            <span><a href="">Contact Us</a></span>
+            <span><a href="">Speed Test</a></span>
+            <span><a href="">Legal Notices</a></span>
+            <span><a href="">Only on Netflix</a></span>
+
+        </div>
+        <button class="eng">English</button>
+        <div class="bottom">Netflix India</div>
+
+    </div>
 </body>
 
 </html>
